# Glean

./: .editorconfig  .gitignore  DESIGN.md  Dockerfile  FRONTEND.md  LICENSE  README.md  compose.yml  env.example  justfile  pyrightconfig.json
.github/: renovate.json
backend/: README.md  main.py  pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py  books.py  chapters.py  deps.py  files.py  scan.py  system.py
backend/src/core/: __init__.py  config.py  database.py  log.py  models.py  schemas.py  security.py
backend/src/services/: __init__.py  book_service.py  parser.py  scanner.py
backend/src/services/parser/: __init__.py  cleaner.py  core.py  utils.py  validator.py
backend/tests/: test_cleaner.py  test_parser.py
frontend/: README.md  eslint.config.js  index.html  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  sw.ts  vite-env.d.ts
frontend/src/api/: books.ts  chapters.ts  client.ts  index.ts  scan.ts  system.ts
frontend/src/components/: AppHeader.vue  BaseModal.vue  BookItem.vue  BottomNav.vue  FileTree.vue  PWABadge.vue  ScanManager.vue  TreeItem.vue
frontend/src/components/layout/: AppHeader.vue
frontend/src/components/reader/: ReaderContent.vue  ReaderHeader.vue  ReaderSettings.vue  ReaderTOC.vue
frontend/src/components/ui/: ConfirmModal.vue  EmptyState.vue  SkeletonLoader.vue
frontend/src/composables/: useReader.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  books.ts  reader.ts
frontend/src/types/: api.ts
frontend/src/views/: Bookshelf.vue  Discovery.vue  Library.vue  Login.vue  Management.vue  Reader.vue  Settings.vue
