[project]
name = "glean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "chardet>=5.2.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "loguru>=0.7.3",
    "opencc>=1.1.9",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.31",
]

[tool.ruff]
src = ["src", 'app.py']
line-length = 110
exclude = ['.venv', 'ui']

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['E402']
'**/{tests,docs,tools}/*' = ['E402']
'**/*.ipynb' = ['F401']

[tool.ruff.format]
quote-style = 'single'


[tool.basedpyright]
include = ['src/**/*.py']
exclude = [
    '**/node_modules',
    '**/__pycache__',
    'src/experimental',
    'src/typestubs',
]
ignore = ['.venv/', 'typings/', 'archive/']
defineConstant = { DEBUG = true }
stubPath = 'typings/'

reportCallIssue = false
reportExplicitAny = false
reportAny = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false
reportArgumentType = false
reportUnnecessaryIsInstance = false
reportCallInDefaultInitializer = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportPrivateImportUsage = false
reportUnusedImport = false
